refactor: refactored the Input class to make different methods to validate each input in terms of plateau size, position, and instruction. Generating new tests for the new methods in the process